--- a/Spotify_To_GPM/requirements.txt
+++ b/Spotify_To_GPM/requirements.txt
@@ -1,9 +1,11 @@
 appdirs==1.4.3
 beautifulsoup4==4.6.3
-certifi==2018.8.13
+certifi==2018.4.16
 chardet==3.0.4
 decorator==4.3.0
+defusedxml==0.5.0
 Django==2.0
+django-oauth-toolkit==1.2.0
 future==0.16.0
 gmusicapi==11.0.1
 gpsoauth==0.4.1
@@ -14,17 +16,27 @@ MechanicalSoup==0.10.0
 mock==2.0.0
 mutagen==1.41.1
 oauth2client==4.1.2
+oauthlib==2.1.0
 pbr==4.2.0
+pipenv==2018.7.1
 proboscis==1.2.6.0
 protobuf==3.6.1
+psycopg2==2.7.5
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
 pycryptodomex==3.6.6
+PyJWT==1.6.4
 python-dateutil==2.7.3
+python3-openid==3.1.0
 pytz==2018.5
 requests==2.19.1
+requests-oauthlib==1.0.0
 rsa==3.4.2
 six==1.11.0
+social-auth-app-django==2.1.0
+social-auth-core==1.7.0
 spotipy==2.4.4
 urllib3==1.23
 validictory==1.1.2
+virtualenv==16.0.0
+virtualenv-clone==0.3.0
